unpackaged/objects/Plan_Of_Study__c.object
<CustomObject>
    <fields>
        <fullName>Capstone_Advisor__c</fullName>
        <label>Capstone Advisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plan Of Studies</relationshipLabel>
        <relationshipName>Plan_Of_Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Faculty_Advisor__c</fullName>
        <label>Faculty Advisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head_of_Studies__c</fullName>
        <label>Head of Studies for Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Of_Study__c</fullName>
        <label>Year of Study as of form submission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year_Of_Study</valueSetName>
        </valueSet>
    </fields>
    <label>Plan Of Study</label>
    <nameField>
        <displayFormat>POS-{0000000000}</displayFormat>
        <label>Plan Of Study ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Of Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>